Updated html file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <div class="header">
       <h1>Gallery</h1>
       <input type="search " name="search"
-        id="search" value="" placeholder="Search waterfall or..."/>
+        id="search" value="" placeholder="Search waterfalls or..."/>
     </div>
 
 
